syntax = "proto3";
package auth.v1;
option go_package="coolcar/auth/api/gen/v1;authpb";

message LoginReq{
    string code = 1;
}

message LoginRsp {
    string access_token = 1;
    int32 expires_in = 2;
}

service AuthService{
    rpc Login (LoginReq) returns (LoginRsp);
}