syntax = "proto3";

package blob.v1;
option go_package = "coolcar/blob/api/gen/v1;blobpb";

// blob只对内提供服务,对外由profile引出
service BlobService {
  rpc CreateBlob (CreateBlobReq) returns (CreateBlobRsp);
  rpc GetBlob (GetBlobReq) returns (GetBlobRsp);
  rpc GetBlobURL (GetBlobURLReq) returns (GetBlobURLRsp);
}

message CreateBlobReq {
  string account_id = 1;
  int32 upload_url_timeout_sec = 2;
}

message CreateBlobRsp {
  string id = 1;
  string upload_url = 2;
}

message GetBlobReq {
  string id = 1;
}

message GetBlobRsp {
  bytes data = 1;
}

message GetBlobURLReq {
  string id = 1;
  int32 timeout_sec = 2;
}

message GetBlobURLRsp {
  string url = 1;
}